tests/A2/reject/returnType2.ul
void main(){

}

void foo(){
    return true;
}